# Optiplate

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: config.h.in  copy.cmake
doc/: config
examples/: base.oml  real.oml
resources/: info.rc  resources.qrc
resources/styles/: modern.qss
resources/translations/: application_en.ts  application_ru.ts
scripts/: archive.sh  generateDocs.sh  installKCL.sh
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  fileutility.cpp  fileutility.h  mathutility.cpp  mathutility.h  optimizer.cpp  optimizer.h  panel.cpp  panel.h  project.cpp  project.h  properties.cpp  properties.h  utility.cpp  utility.h
src/frontend/: CMakeLists.txt  convergenceplot.cpp  convergenceplot.h  customplot.cpp  customplot.h  custompropertyeditor.cpp  custompropertyeditor.h  customtable.cpp  customtable.h  datatip.cpp  datatip.h  geometryplot.cpp  geometryplot.h  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  optionseditor.cpp  optionseditor.h  paneleditor.cpp  paneleditor.h  plottablepropertyeditor.cpp  plottablepropertyeditor.h  propertieseditor.cpp  propertieseditor.h  propertiesviewer.cpp  propertiesviewer.h  solutionbrowser.cpp  solutionbrowser.h  solutionitem.cpp  solutionitem.h  solutionmodel.cpp  solutionmodel.h  uiconstants.h  uiutility.cpp  uiutility.h
tests/: CMakeLists.txt
tests/testbackend/: CMakeLists.txt  testbackend.cpp  testbackend.h
tests/testfrontend/: CMakeLists.txt  testfrontend.cpp  testfrontend.h
